# lantern

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: test.yml
src/: compare.py  log_config.py  main.py  type_utils.py
tests/: test_api.py  test_compare.py
