[tool.poetry]
name = "python-coding-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pre-commit = "^3.7.1"
ruff = "^0.5.1"
mypy = "^1.10.1"
bandit = "^1.7.9"
pytest = "^8.2.2"
pandas-stubs = "^2.2.2.240603"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B101"]

[tool.ruff]
exclude = ["src/pdf_service.py"]
